--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>P2P E2EE Chat</h1>
+            <h1>P2P E2EE Chat v1</h1>
             <p>Secure peer-to-peer messaging with QR code connections</p>
         </header>
         
