--- a/adam.html
+++ b/adam.html
@@ -77,7 +77,7 @@
           <div class="small" style="margin-top:6px">La paraphrase reste en session. Fermez l'onglet pour la supprimer.</div>
         </div>
         <div style="text-align:right">
-          <div class="small">Indice : B L D I</div>
+          <div class="small">Indice : BLD I</div>
         </div>
       </div>
 
@@ -87,7 +87,7 @@
       </div>
       <div style="margin-top:12px;display:flex;gap:8px;">
         <button id="unlockBtn">Déverrouiller</button>
-        <button id="quickBtn" class="ghost"></button>
+        <button id="quickBtnf" class="ghost">Personnel</button>
       </div>
       <div class="dangerline"></div>
       <div class="disclaimer">Toutes les données affichées sont générées localement et sont fictives.</div>
