--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
     <script>
         // Configuration
-        const SIGNALING_SERVER = 'wss://yourusername.pythonanywhere.com/ws'; // Replace with your PythonAnywhere WebSocket URL
+        const SIGNALING_SERVER = 'wss://blanck.pythonanywhere.com/socket.io'; // Replace with your PythonAnywhere WebSocket URL
         const ENCRYPTION_ALGORITHM = 'AES-GCM';
         const KEY_LENGTH = 256;
 
